--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <P>
-      Prueba de Versos en Bucle Regresivo
+      Sistema para calcuculo de Vacaciones segun normativa Chilena
     </P>
 
 
