--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <input id="user" type="text" />
       <label>Contrasena</label>
       <input id="password" type="password" />
-      <button onclick="submit()">Ingresar</button>
+      <button id="boton" onclick="submit()">Registrar</button>
     </div>
     <div class="loggedContainer" id="loggedIn">
       <p>Bienvenido</p>
